# se5-ai-translator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  how-to-test.md  plugin.json  se-ai-translator
.github/workflows/: auto-tag.yml  release.yml
.opencode/skills/: rust-patterns
docs/: ci-cd.md
src/: api.rs  config.rs  debug_log.rs  local_config.rs  main.rs  se_contract.rs  ui.rs
src/api/: auth.rs  credits.rs  detect.rs  info.rs  mod.rs  translate.rs
src/ui/: account.rs  ai_models.rs  credits.rs  mod.rs  translate.rs  update.rs
tests/: .env.example  run_test.sh
tests/API_tests/: test_credits.sh  test_detect_language.sh  test_languages.sh  test_services_info.sh  test_translate.sh
tests/example_srt/: test_archer_2min.srt
