[package]
name = "se-ai-translator"
version = "0.4.2"
edition = "2024"
description = "SubtitleEdit 5 plugin for AI subtitle translation via OpenSubtitles API"
authors = ["AI.OpenSubtitles.com"]
repository = "https://github.com/iceman1010/se5-ai-translator"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "native-tls"] }
tokio = { version = "1", features = ["rt", "time"] }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"
open = "5.3.5"
self-replace = "1.5.0"
tar = "0.4.46"
flate2 = "1.1.9"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
